[gd_scene load_steps=4 format=3 uid="uid://dytcyb4ulhnni"]

[ext_resource type="Texture2D" uid="uid://7e5elupve8og" path="res://Screenshot 2025-01-19 020537.PNG" id="1_4vp03"]
[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_aou35"]
[ext_resource type="VideoStream" path="res://0294-1196.ogv" id="2_8w6r1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_aou35")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1088.0
scale = Vector2(0.603004, 0.607918)
stream = ExtResource("2_8w6r1")
autoplay = true
loop = true

[node name="SingleButton" type="Button" parent="."]
offset_left = 41.0
offset_top = 278.0
offset_right = 422.0
offset_bottom = 350.0
text = "Single-Player"

[node name="MultiButton" type="Button" parent="."]
offset_left = 43.0
offset_top = 377.0
offset_right = 424.0
offset_bottom = 449.0
text = "MultiPlayer"

[node name="QuitButton" type="Button" parent="."]
offset_left = 46.0
offset_top = 473.0
offset_right = 427.0
offset_bottom = 545.0
text = "Exit Game"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 611.0
offset_top = 56.0
offset_right = 1185.0
offset_bottom = 210.0
texture = ExtResource("1_4vp03")

[node name="Panel" type="Panel" parent="."]
offset_left = 871.0
offset_top = 486.0
offset_right = 911.0
offset_bottom = 526.0
scale = Vector2(6.11495, 3.45017)

[node name="TextEdit" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 8.01315
offset_top = 6.95617
offset_right = 96.0132
offset_bottom = 79.9562
scale = Vector2(0.230506, 0.326192)
text = "W - UP
S - DOWN"

[connection signal="pressed" from="SingleButton" to="." method="_on_single_button_pressed"]
[connection signal="pressed" from="MultiButton" to="." method="_on_multi_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
